--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
         <artifactId>selenium-firefox-driver</artifactId>
         <version>2.53.1</version>
     </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-chrome-driver</artifactId>
+        <version>2.53.1</version>
+    </dependency>
 	
 	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
 	<dependency>
